# treesitter-snap-grammar

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.snap  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-snap.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_snap/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSnap/: snap.h
bindings/swift/TreeSitterSnapTests/: TreeSitterSnapTests.swift
src/: grammar.json  node-types.json  parser.c
